--- a/free_dashboard.html
+++ b/free_dashboard.html
@@ -89,9 +89,9 @@
                             My Account
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="./free_profile.html">Profile</a>
-                            <a class="dropdown-item" href="#">Billing & Invoices</a>
-                            <a class="dropdown-item" href="#">Support</a>
+                            <a class="dropdown-item" href="./free_profile.html#the_profile">Profile</a>
+                            <a class="dropdown-item" href="./free_profile.html#the_billing">Billing & Invoices</a>
+                            <a class="dropdown-item" href="./free_profile.html#the_support">Support</a>
                             <a class="dropdown-item" href="#">Log out</a>
                         </div>
                     </li>
