--- a/free_profile.html
+++ b/free_profile.html
@@ -164,20 +164,20 @@
             <!-- Third -->
             <div class="container third mt-4">
                 <div class="row justify-content-center">
-                    <div class="col-md-10  p-0 card border-radius mb-4 py-md-4 ">
+                    <div class="col-md-10  p-0 card tt border-radius mb-4 py-md-4 ">
                         <div class="row justify-content-center">
                             <div class="col-md-12">
-                                <div class="card-body">
+                                <div class="px-3">
                                     <div class="">
                                         <ul class="nav d-flex justify-content-center no- nav-pills mb-3 " id="pills-tab" role="tablist">
                                             <li class="nav-item  px-1 text-center" style="flex:1">
-                                                <a class="nav-link text-grey active" id="pills-active-tab" data-toggle="pill" href="#my-profile" role="tab" aria-controls="pills-home" aria-selected="true">
+                                                <a id="the_profile" class="nav-link text-grey active" id="pills-active-tab" data-toggle="pill" href="#my-profile" role="tab" aria-controls="pills-home" aria-selected="true">
                                                     <span class="text-white">My Profile
                                                     </span>
                                                 </a>
                                             </li>
                                             <li class="nav-item  px-1 text-center" style="flex:1">
-                                                <a class="nav-link text-dark" id="pills-gainers-tab" data-toggle="pill" href="#billing-invoices" role="tab" aria-controls="pills-gainers" aria-selected="false">
+                                                <a id="the_billing" class="nav-link text-dark" id="pills-gainers-tab" data-toggle="pill" href="#billing-invoices" role="tab" aria-controls="pills-gainers" aria-selected="false">
                                                     <span class="text-white">
                                                         Billing & Invoices
                                                     </span>
@@ -191,7 +191,7 @@
                                                 </a>
                                             </li>
                                             <li class="nav-item  px-1 text-center" style="flex:1">
-                                                <a class="nav-link text-dark" id="pills-support-tab" data-toggle="pill" href="#support" role="tab" aria-controls="pills-contact" aria-selected="false">
+                                                <a id="the_support" class="nav-link text-dark" id="pills-support-tab" data-toggle="pill" href="#support" role="tab" aria-controls="pills-contact" aria-selected="false">
                                                     <span class="text-white">
                                                         Support
                                                     </span>
@@ -208,7 +208,7 @@
                                     </div>
                                     <div class="tab-content mt-md-5" id="pills-tabContent">
                                         <div class="tab-pane fade show active" id="my-profile" role="tabpanel" aria-labelledby="pills-active-tab">
-                                            <div class="row justify-content-between align-items-center no-gutters">
+                                            <div class="row justify-content-between">
                                                 <div class="col-md-3">
                                                     <img src="https://miro.medium.com/max/560/1*MccriYX-ciBniUzRKAUsAw.png" class="w-100" alt="">
                                                     <div class="row justify-content-center">
@@ -254,7 +254,6 @@
                                                     </form>
                                                 </div>
                                             </div>
-
                                         </div>
                                         <div class="tab-pane fade" id="billing-invoices" role="tabpanel" aria-labelledby="pills-gainers-tab">
                                             <div>
@@ -344,34 +343,49 @@
                                                 <div class="col-md-8">
                                                     <div class="mb-3">
                                                         <h1 class="h3 text-white">
-                                                            Free Plan
+                                                            Premium Plan
                                                         </h1>
-                                                        <p class="h6 font-weight-normal p-0">
-                                                            Real-time forex news
-                                                        </p>
-                                                        <p class="h6 font-weight-normal p-0">
-                                                            Real-time stock updates on
-                                                        </p>
-                                                        <p class="h6 font-weight-normal p-0">
-                                                            Real-time stock updates on
-                                                        </p>
+                                                        <div class="row justify-content-between">
+                                                            <div class="col-sm-6">
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time forex news
+                                                                </p>
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time stock updates on
+                                                                </p>
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time stock updates on
+                                                                </p>
+                                                            </div>
+                                                            <div class="col-sm-6">
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time forex news
+                                                                </p>
+                                                                <p class="h6 font-weight-normal p-0">
+                                                                    Real-time stock updates on
+                                                                </p>
+                                                            </div>
+                                                        </div>
                                                     </div>
                                                     <div class="d-flex align-items-end">
                                                         <div class="mr-md-4">
-                                                            <a class="btn btn-success px-4 js-scroll-trigger" href="./upgrade.html">
-                                                                Go Premium
+                                                            <a class="btn btn-success px-4 js-scroll-trigger" href="#">
+                                                                Renew
                                                             </a>
                                                         </div>
                                                         <div>
-                                                            <p class="text-success m-0 p-0">See full details</p>
+                                                            <p class="text-success m-0 p-0">Expires May 14th 2021</p>
                                                         </div>
                                                     </div>
 
                                                 </div>
                                                 <div class="col-md-2">
-                                                    <h1 class="h2 text-white">
-                                                        $0.00
+                                                    <h1 class="h2 text-white mb-0">
+                                                        $900.00
                                                     </h1>
+                                                    <p class="m-0 p-0 text-success">
+                                                        Yearly
+                                                    </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -514,6 +528,7 @@
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
     <script src="js/profile_tweak.js"></script>
+    <script src="js/handler_profile_display.js"></script>
 </body>
 
 </html>
