--- a/free_dashboard.html
+++ b/free_dashboard.html
@@ -168,12 +168,12 @@
                                             reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.akdalakmdsa f salkmf asldkfa dssflka
                                             fa
                                             <br>
-                                            <a class="text-success" href="###">View</a>
+                                            <a class="text-success" href="###">Read more</a>
                                         </div>
                                     </p>
                                     <span class="float-right">
                                         <a class="" data-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample2">
-    Read more
+    Expand
 </a>
                                     </span>
 
@@ -188,12 +188,12 @@
                                             reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.akdalakmdsa f salkmf asldkfa dssflka
                                             fa
                                             <br>
-                                            <a class="text-success" href="###">View</a>
+                                            <a class="text-success" href="###">Read more</a>
                                         </div>
                                     </p>
                                     <span class="float-right">
                                         <a class="" data-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample3">
-    Read more
+    Expand
 </a>
                                     </span>
                                 </div>
@@ -206,12 +206,12 @@
                                             reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.akdalakmdsa f salkmf asldkfa dssflka
                                             fa
                                             <br>
-                                            <a class="text-success" href="###">View</a>
+                                            <a class="text-success" href="###">Read more</a>
                                         </div>
                                     </p>
                                     <span class="float-right">
                                         <a class="" data-toggle="collapse" href="#collapseExample4" role="button" aria-expanded="false" aria-controls="collapseExample4">
-    Read more3
+    Expand
 </a>
                                     </span>
 
@@ -240,12 +240,12 @@
                                                 reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.akdalakmdsa f salkmf asldkfa dssflka
                                                 fa
                                                 <br>
-                                                <a class="text-success" href="###">View</a>
+                                                <a class="text-success" href="###">Read more</a>
                                             </div>
                                         </p>
                                         <span class="float-right">
                                             <a class="" data-toggle="collapse" href="#collapseExample5" role="button" aria-expanded="false" aria-controls="collapseExample5">
-        Read more
+        Expand
     </a>
                                         </span>
                                     </div>
@@ -258,12 +258,12 @@
                                                 reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.akdalakmdsa f salkmf asldkfa dssflka
                                                 fa
                                                 <br>
-                                                <a class="text-success" href="###">View</a>
+                                                <a class="text-success" href="###">Read more</a>
                                             </div>
                                         </p>
                                         <span class="float-right">
                                             <a class="" data-toggle="collapse" href="#collapseExample6" role="button" aria-expanded="false" aria-controls="collapseExample6">
-        Read more
+        Expand
     </a>
                                         </span>
                                     </div>
@@ -276,12 +276,12 @@
                                                 reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.akdalakmdsa f salkmf asldkfa dssflka
                                                 fa
                                                 <br>
-                                                <a class="text-success" href="###">View</a>
+                                                <a class="text-success" href="###">Read more</a>
                                             </div>
                                         </p>
                                         <span class="float-right">
                                             <a class="" data-toggle="collapse" href="#collapseExample7" role="button" aria-expanded="false" aria-controls="collapseExample7">
-        Read more
+        Expand
     </a>
                                         </span>
                                     </div>
@@ -480,7 +480,7 @@
                             <h5 class="mb-0">Title</h5>
                             <p class="mb-0">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica
                             </p>
-                            <span class="float-right"><a href="">Read more</a></span>
+                            <span class="float-right"><a href="">Expand</a></span>
 
                         </div>
                         <div class="card card-body">
@@ -488,7 +488,7 @@
                             <h5 class="mb-0">Title</h5>
                             <p class="mb-0">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica
                             </p>
-                            <span class="float-right"><a href="">Read more</a></span>
+                            <span class="float-right"><a href="">Expand</a></span>
 
                         </div>
                         <div class="card card-body">
@@ -496,7 +496,7 @@
                             <h5 class="mb-0">Title</h5>
                             <p class="mb-0">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica
                             </p>
-                            <span class="float-right"><a href="">Read more</a></span>
+                            <span class="float-right"><a href="">Expand</a></span>
 
                         </div>
                         <div class="card card-body">
@@ -504,7 +504,7 @@
                             <h5 class="mb-0">Title</h5>
                             <p class="mb-0">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica
                             </p>
-                            <span class="float-right"><a href="">Read more</a></span>
+                            <span class="float-right"><a href="">Expand</a></span>
 
                         </div>
                         <div class="card card-footer bg-success">
