update currency selector

--- a/pricing.html
+++ b/pricing.html
@@ -137,20 +137,20 @@
 
             <div class="row justify-content-center">
                 <div class="col-md-12 col-lg-10 col-xl-8">
-                    <div>
-                        <select id="currency" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                            <option value="$">USD</option>
-                            <option value="&#8358">NGN</option>
-                        </select>
-                    </div>
+                
 
-                    <div class="text-center mb-5">
+                    <div class="text-left mb-5">
                         <span class="text-white ml-md-5 pl-md-3">Monthly</span>
                         <label class="switch mx-2">
                             <input type="checkbox" checked id="swith">
                             <span class="slider round"></span>
                         </label>
                         <span class="text-white">Yearly (save 25%)</span>
+
+                        <select id="currency" class="form-select form-select-lg mb-3 float-right px-3 py-2 rounded-pill">
+                            <option value="$">USD</option>
+                            <option value="&#8358">NGN</option>
+                        </select>
                     </div>
                     <div class="card-group">
                         <div class="card mb-5 mb-md-0 boxshadow border-0 hoverborder black1_bg">
