--- a/upgrade.html
+++ b/upgrade.html
@@ -181,22 +181,35 @@
                                 Pay for
                             </p>
                             <div class="mb-5">
-                                <span class="text-white">One Month</span>
+                                <!-- <span class="text-white">One Month</span>
                                 <label class="switch mx-2">
                                     <input type="checkbox" checked id="switch">
                                     <span class="slider round"></span>
                                 </label>
-                                <span class="text-white">One Year<span class="small"> (save 25%)</span></span>
-                                <p class="py-0 my-0 text-center mt-5">
-                                    <span>$</span>
-                                    <span id="premuimPrice" class="h1 text-white font-weight-bold">900</span>
-                                    <span> total</span>
+                                <span class="text-white">One Year<span class="small"> (save 25%)</span></span> -->
+                                <span class="text-white">Monthly</span>
+                                <label class="switch mx-2">
+                                    <input type="checkbox" checked id="swith">
+                                    <span class="slider round"></span>
+                                </label>
+                                <span class="text-white">Yearly (save 25%)</span>
+                                <p class="py-0 my-3 text-center">
+                                    <span class="curr">
+                                        $
+                                    </span>
+                                    <span id="premuimPrice" class="h1 text-white font-weight-bold">75</span>
+                                    <span></span>
                                 </p>
                             </div>
-                            <p class="mb-1">
+                            <div class="mb-1">
                                 Select Currency
-                            </p>
-                            <div class="d-flex">
+
+                                <select id="currency" class="form-select form-select-lg mb-3 float-right px-3 py-2 rounded-pill">
+                                    <option value="usd">USD</option>
+                                    <option value="ngn">NGN</option>
+                                </select>
+                            </div>
+                            <!-- <div class="d-flex">
                                 <div class="mb-3 form-check">
                                     <input required class="form-check-input" type="radio" name="currencyType" id="USD" value="USD">
                                     <label class="form-check-label" for="USD">USD</label>
@@ -206,10 +219,12 @@
                                     <input required class="form-check-input" type="radio" name="currencyType" id="NGN" value="NGN">
                                     <label class="form-check-label" for="NGN">NGN</label>
                                 </div>
-                            </div>
+                            </div> -->
 
+
+                            <div class="my-5"></div>
                             <div class="row justify-content-center my-3">
-                                <div class="col-md-8">
+                                <div class="col">
                                     <a href="./premium.html"><button style="background-color: green;"
                                             class=" btn btn-block btn-success btn-lg">Complete Order</button></a>
                                 </div>
@@ -302,19 +317,37 @@
     <script src="assets/mail/contact_me.js"></script>
     <!-- Core theme JS-->
     <script src="js/scripts.js"></script>
-    <script>
-        var theSwitch = document.getElementById("switch");
-        var premuimPrice = document.getElementById('premuimPrice').innerHTML;
-        theSwitch.onchange = () => {
-            if (premuimPrice == 900) {
-                premuimPrice = 100;
-            } else {
-                premuimPrice = 900
-            }
-            document.getElementById('premuimPrice').innerHTML = premuimPrice
-        }
-    </script>
+    <!-- <script>
+        // var theSwitch = document.getElementById("switch");
+        // var premuimPrice = document.getElementById('premuimPrice').innerHTML;
+        // theSwitch.onchange = () => {
+        //     if (premuimPrice == 900) {
+        //         premuimPrice = 100;
+        //     } else {
+        //         premuimPrice = 900
+        //     }
+        //     document.getElementById('premuimPrice').innerHTML = premuimPrice
+        // }
+    </script> -->
 
+    <!-- <script src="js/pricing_price.js">
+    </script> -->
+    <script src="js/pricing_price.js">
+        // $('#currency').change(function() {
+        //     var currentPrice = document.getElementById('premuimPrice').innerHTML;
+        //     currency = $("#currency option:checked").val();
+        //     if (currency == 'ngn') {
+        //         $('.curr').html('&#8358');
+        //         currentPrice = parseFloat(currentPrice) * 480;
+
+        //     } else {
+        //         $('.curr').html('$');
+        //         currentPrice = parseFloat(currentPrice) * 480;
+        //     }
+        //     console.log(currentPrice);
+        //     document.getElementById('premuimPrice').innerHTML = currentPrice
+        // });
+    </script>
 </body>
 
 </html>
